Uninstall bluefish.xml from the correct directory
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1685 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -75,7 +75,7 @@ install: all $(INSTALLDATA)
 	done
 
 uninstall:
-	rm -rf $(DESTDIR)$(GNOME2MIME)/bluefish.xml
+	rm -rf $(DESTDIR)$(GNOME2MIME)/packages/bluefish.xml
 	rm -rf $(GNOME2MIMEINFO)/bluefish.mime
 	rm -rf $(GNOME2MIMEINFO)/bluefish.keys
 	rm -rf $(GNOME2APPLICATIONREGISTRY)/bluefish.applications
