tested twice for update_mime, should test both mime and desktop
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1688 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -444,7 +444,7 @@ if test "x$WITHGNOME2" != "xno" ; then
 			fi
 		fi
 	fi
-	if test "x$UPDATE_MIME" != "xno" -a "x$UPDATE_MIME" != "xno" ; then
+	if test "x$UPDATE_MIME" != "xno" -a "x$UPDATE_DESKTOP" != "xno" ; then
 		echo -n "checking for gnome2.8 mime directory... "
 		if test -d ${GNOME2PREFIX}/share/mime/ ; then
 			echo "${GNOME2PREFIX}/share/mime/"
