Michele found  another bug in configure where I tested UPDATE_MIME twice instead of UPDATE_MIME and UPDATE_DESKTOP
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1689 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -412,7 +412,7 @@ if test "x$WITHGNOME2" != "xno" ; then
 			echo "no"
 		fi
 	fi	
-	if test "x$UPDATE_MIME" = "xno" -a "x$UPDATE_MIME" = "xno" ; then
+	if test "x$UPDATE_MIME" = "xno" -a "x$UPDATE_DESKTOP" = "xno" ; then
 		echo -n "checking for gnome2.6 mime-info directory... "
 		if test -d ${GNOME2PREFIX}/share/mime-info ; then
 			echo "${GNOME2PREFIX}/share/mime-info"
