--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -39,7 +39,7 @@ FUNCREFFILES = funcref_html.xml funcref_php.xml funcref_css.xml funcref_python.x
 	sed -e 's!PKGDATADIR!$(pkgdatadir)!' < $< > $@
 
 all: $(DEFAULTFILES)
-	sed -e 's!ICONDIR!$(iconpath)!' < bluefish.desktop.in > bluefish.desktop
+	sed -e 's!ICONDIR!$(ICONPATH)!' < bluefish.desktop.in > bluefish.desktop
 	if test "x${HAVE_GNOME_VFS}" = "xyes" ; then \
 		sed -e 's!EXPECT_URIS!true!' -e 's!SUPPORTED_URI_SCHEMES!file,http,ftp,sftp,smb!' < bluefish.applications.in > bluefish.applications ;\
 	else \
