--- a/data/bluefish.applications.in
+++ b/data/bluefish.applications.in
@@ -5,6 +5,7 @@ bluefish
 	expects_uris=EXPECT_URIS
 	supported_uri_schemes=SUPPORTED_URI_SCHEMES
 	requires_terminal=false
+	uses_gnomevfs=EXPECT_URIS
 	mime_types=text/html,text/plain,text/x-c,text/x-objc,text/x-c++,text/x-c-header,text/x-perl,text/x-java,text/xml,text/sgml,application/x-php,application/x-asp,text/vnd.wap.wml,image/svg,text/x-javascript,text/javascript,text/x-python,text/x-php,application/x-cgi,text/css,text/mathml,text/x-dtd,text/x-sql,text/x-po,text/*
 
 bluefishproject
