--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -58,7 +58,5 @@ install: all
 	done
 
 uninstall:
-	/bin/rm -f $(DESTDIR)$(pkgdatadir)/icon_*.png
-
-
+	/bin/rm -f $(DESTDIR)$(pkgdatadir)icon_*.png
 
