--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -193,25 +193,25 @@ Ruby:Special Characters:1:(\:|=|>|<|\\+|\\*|\\/|\\\\|&|!|#|%|~|\\||\\.|,|~)::2::
 shell:Operators:1:[\\~\\%\\^\\&\\,\\.\\\:\\|\\+\\/\\*\\!]::2::#8b2323::0:0:
 shell:Equality:1:(<|>|<=|>=|!=|==)::2::#ff0000::0:0:
 shell:Number:1:[0-9]::2::#ff0000::0:0:
-shell:Variable (sys):1:\\$[\\$\\?\\*0-9]::2::#ff0000::2:0:
-shell:Variable:1:\\$[a-z][a-z0-9_]*::2::#bb00bb::0:0:
 shell:String (EOF):0:>>EOF:EOF:1::#ee00dd::0:0:
-shell:String (executed):1:`:`:1::#ff0000:#ffff00:0:0:
+shell:String (executed):1:`:`:1::#990000:#ffff44:0:0:
 shell:String (single quoted):1:':':1::#009900::0:0:
 shell:String (double quoted):1:":":1::#009900::0:0:
 shell:Exec String Escape Function:0:\\b(action|daemon|echo_failure|echo_success|failure|gprintf|killproc|printf|success)\\b::2:^String \\(executed\\)$:#e96969::0:0:
 shell:Exec String Escape Command:0:\\b(awk|cat|chgrp|chmod|chown|cp|date|echo|export|egrep|exec|fgrep|grep|halt|install|kill|killall|ls|mkdir|mount|mv|perl|pidof|reboot|rm|rmdir|sed|sh|sleep|sort|test|touch|umount)\\b::2:^String \\(executed\\)$:#c06000::0:0:
-shell:String Escape Variable (sys):1:\\$[\\$\\?\\*\\#0-9]::2:^String \\(double quoted\\)$:#ff0000::2:0:
-shell:String Escape Variable:1:\\$[a-z][a-z0-9_]*::2:^String \\(double quoted\\)$:#bb00bb::0:0:
+shell:String escape:1:\\\\.::2:^String \\([^)]+\\)$:#000099::0:0:
+shell:Variable:1:\\$[a-z][a-z0-9_]*::2:^(top|String \\([^)]+\\))$:#bb00bb::0:0:
+shell:Variable (sys):1:\\$[\\$\\?\\*0-9]::2:^(top|String \\([^)]+\\))$:#ff0000::2:0:
 shell:Assignment:1:[a-z][a-z0-9_]*=::2::#424086::0:0:
-shell:Brackets:1:[\\[\\]]::2::#0000ff::0:0:
+shell:Brackets:1:[\\[\\]]::2::#0000ff::2:0:
 shell:Braces:1:[{}]::2::#0000ff::2:0:
-shell:Parentheses:1:[()]::2::#0000ff::0:0:
+shell:Parentheses:1:[()]::2::#0000ff::2:0:
 shell:Modifier:0:(local|-a|-d|-f|-n |-o|-x|-eq|-ge|-gt|-le|-lt|-ne)::2::#ff0000::0:0:
 shell:Function:0:\\b(action|daemon|echo_failure|echo_success|failure|gprintf|killproc|printf|success)\\b::2::#e96969::0:0:
 shell:Command:0:\\b(awk|cat|chgrp|chmod|chown|cp|date|echo|export|egrep|exec|fgrep|grep|halt|install|kill|killall|ls|mkdir|mount|mv|perl|pidof|reboot|rm|rmdir|sed|sleep|sort|test|touch|umount)\\b::2::#c06000::0:0:
 shell:Statement:0:\\b(alias|break|case|continue|do|done|elif|else|esac|exit|export|fi|for|if|in|return|set|shift|then|unalias|unset|while)\\b::2::#0000ff::0:0:
 shell:Comment:1:#.*?$::2::#994f49::0:2:
+shell:EOL escape:1:\\\\\\n::2::#cc0000::0:0:
 sql:Braces:1:[{()}]::2::::2:0:
 sql:Table:1:([a-z0-9]+)\\.::2::::2:2:
 sql:Row:1:\\.([a-z0-9]+)::2::::0:2:
