updated the debian package files for the new ./configure system
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1707 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/debian/control
+++ b/bluefish/debian/control
@@ -19,3 +19,6 @@ Description: A Gtk+ HTML editor
  For validation to work you need weblint.  For preview to work,
  you need a web browser that can view local files given to it
  on the command line.
+ .
+ Homepage: http://bluefish.openoffice.nl/
+
