--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AC_CONFIG_SRCDIR(src/bluefish.c)
 AC_CONFIG_HEADER(src/config.h)
 
 PACKAGE=bluefish
-VERSION=pre1.0
+VERSION=1.0
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
