fixing two changes that have been incorporated into the bluefish 1.0 tarball
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1714 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -452,7 +452,7 @@ if test "${FDMIME}" != "no" ; then
 		AC_SUBST(FDMIME)
 		AC_PATH_PROG(UPDATE_MIME, update-mime-database, "no")
 		if test "${UPDATEDATABASES}" != "no" -a "${UPDATE_MIME}" != "no"; then
-			INSTALLDATA="$INSTALLDATA install-update-mime"
+			INSTALLDATA="install-update-mime $INSTALLDATA"
 			AC_SUBST(UPDATE_MIME)
 		fi
 	fi
