--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -40,7 +40,7 @@ FUNCREFFILES = funcref_html.xml funcref_php.xml funcref_css.xml funcref_python.x
 
 all: $(DEFAULTFILES)
 	sed -e 's!ICONDIR!$(ICONPATH)!' < bluefish.desktop.in > bluefish.desktop
-	if test "x${HAVE_GNOME_VFS}" = "xyes" ; then \
+	if test "x${HAVE_GNOME_VFS}" = "x1" ; then \
 		sed -e 's!EXPECT_URIS!true!' -e 's!SUPPORTED_URI_SCHEMES!file,http,ftp,sftp,smb!' < bluefish.applications.in > bluefish.applications ;\
 	else \
 		sed -e 's!EXPECT_URIS!false!' -e 's!SUPPORTED_URI_SCHEMES!!' < bluefish.applications.in > bluefish.applications ;\
