*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1729 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/debian/rules
+++ b/bluefish/debian/rules
@@ -60,7 +60,8 @@ clean:
 	-test -r /usr/share/misc/config.guess && \
 		cp -f /usr/share/misc/config.guess config.guess
 	
-	aclocal-1.7 && autoconf
+	#aclocal-1.7
+	autoconf
 	dh_clean
 
 install: build
