Add a check for GTK+ 2.6 HAVE_ATLEAST_GNOMEVFS_2_5 was not updated here when configure.ac check was updated to HAVE_ATLEAST_GNOMEVFS_2_6 in configure.ac
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1735 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/config.h.in
+++ b/bluefish/src/config.h.in
@@ -97,11 +97,14 @@
 /* have atleast gtk-2.4 */
 #undef HAVE_ATLEAST_GTK_2_4
 
+/* have atleast gtk-2.6 */
+#undef HAVE_ATLEAST_GTK_2_6
+
 /* have atleast gnome-vfs-2.2 */
 #undef HAVE_ATLEAST_GNOMEVFS_2_2
 
-/* have atleast gnome-vfs-2.5 */
-#undef HAVE_ATLEAST_GNOMEVFS_2_5
+/* have atleast gnome-vfs-2.6 */
+#undef HAVE_ATLEAST_GNOMEVFS_2_6
 
 /* have atleast libgnome-2.6 */
 #undef HAVE_ATLEAST_GNOMEUI_2_6
