--- a/bluefish/data/highlighting.in
+++ b/bluefish/data/highlighting.in
@@ -266,7 +266,7 @@ xml:Tag Name:1:1::3:^Tag$:#005676::2:0:
 xml:Attribute:1:([a-z]*=)("[^"]*")::2:^Tag$:#3cb300::1:0:
 xml:Attribute Content:1:2::3:^Attribute$:#ff7600::1:0:
 xml:Comment:0:<!--:-->:1::#AAAAAA::1:2:
-xml:DocType:1:<!Doctype [a-z0-9]+:[^?-]>:1::#b35300::0:0:
+xml:DocType:1:<!DOCTYPE [a-z0-9]+:[^?-]>:1::#b35300::0:0:
 xml:Character Data:1:<!\\[CDATA\\[:\\]\\]>:1::#a2b300::0:0:
 xml:Character Entity:1:&[^;]+;::2::#9b0054::0:0:
 stylesheet:Selector:1:(\\*|\\b(a|body|abbr|acronym|address|applet|area|b|big|bdo|blockquote|br|button|caption|cite|code|col|colgroup|dd|del|dfn|div|dl|dt|em|embed|fieldset|form|h\\d+|hr|i|iframe|img|input|ins|kbd|label|legend|li|map|noframes|noscript|object|ol|optgroup|option|p|pre|q|samp|select|small|span|strong|table|tbody|td|textarea|tfoot|th|thead|tr|tt|ul|var)\\b)::2:^top$:#cc0000::2:0:
